--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint": "^8.57.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
+        "happy-dom": "^20.0.11",
         "prettier": "^3.2.5",
         "typescript": "^5.4.0",
         "vite": "^5.2.0",
