feat: rename application to kakidash and update build config

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "kakidashi-board",
+    "name": "kakidash",
     "version": "0.0.1",
     "description": "Mindmap Javascript Library",
     "type": "module",
-    "main": "./dist/kakidashi-board.umd.js",
-    "module": "./dist/kakidashi-board.es.js",
+    "main": "./dist/kakidash.umd.js",
+    "module": "./dist/kakidash.es.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/kakidashi-board.es.js",
-            "require": "./dist/kakidashi-board.umd.js"
+            "import": "./dist/kakidash.es.js",
+            "require": "./dist/kakidash.umd.js"
         }
     },
     "files": [
