--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
     branches: [ "main" ]
+    tags: [ "v*" ]
   pull_request:
     branches: [ "main" ]
 
@@ -29,3 +30,14 @@ jobs:
       run: npm run test
     - name: Run Build
       run: npm run build
+    
+    - name: Rename Artifact
+      if: startsWith(github.ref, 'refs/tags/')
+      run: mv dist/kakidash.umd.js dist/kakidash.umd.${{ github.ref_name }}.js
+    
+    - name: Upload Build Artifact
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-artifact@v4
+      with:
+        name: kakidash-library-${{ github.ref_name }}
+        path: dist/kakidash.umd.${{ github.ref_name }}.js
