--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "dev": "vite --host",
         "build": "tsc && vite build",
         "test": "vitest",
-        "lint": "eslint src tests --ext .ts",
+        "lint": "eslint src tests",
         "format": "prettier --write \"src/**/*.{ts,json}\""
     },
     "keywords": [
@@ -30,19 +30,20 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "@eslint/js": "^9.39.2",
         "@types/argparse": "^2.0.17",
         "@types/estree": "^1.0.8",
         "@types/node": "^25.0.5",
         "@types/whatwg-mimetype": "^3.0.2",
         "@types/ws": "^8.18.1",
-        "@typescript-eslint/eslint-plugin": "^7.0.0",
-        "@typescript-eslint/parser": "^7.0.0",
-        "eslint": "^8.57.0",
+        "eslint": "^9.39.2",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-prettier": "^5.5.4",
+        "globals": "^17.0.0",
         "happy-dom": "^20.0.11",
         "prettier": "^3.2.5",
         "typescript": "^5.4.0",
+        "typescript-eslint": "^8.52.0",
         "vite": "^5.2.0",
         "vite-plugin-dts": "^4.5.4",
         "vitest": "^1.4.0"
