--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "scripts": {
         "dev": "vite --host",
         "build": "tsc && vite build",
-        "test": "vitest",
+        "test": "vitest run",
         "lint": "eslint src tests",
         "format": "prettier --write \"src/**/*.{ts,json}\""
     },
