--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Tag on Version Change
+name: Release
 
 on:
   push:
@@ -8,15 +8,32 @@ on:
       - 'package.json'
 
 jobs:
-  tag:
+  release:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      id-token: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org/'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run Check
+        run: |
+          npm run lint
+          npm run build
+          npm run test
 
       - name: Get version from package.json
         id: version
@@ -42,3 +59,20 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git tag -a "v${{ env.VERSION }}" -m "Release v${{ env.VERSION }}"
           git push origin "v${{ env.VERSION }}"
+
+      - name: Rename Artifact
+        if: steps.check_tag.outputs.exists == 'false'
+        run: mv dist/kakidash.umd.js dist/kakidash.umd.${{ env.VERSION }}.js
+
+      - name: Upload Build Artifact
+        if: steps.check_tag.outputs.exists == 'false'
+        uses: actions/upload-artifact@v4
+        with:
+          name: kakidash-library-${{ env.VERSION }}
+          path: dist/kakidash.umd.${{ env.VERSION }}.js
+
+      - name: Publish to npm
+        if: steps.check_tag.outputs.exists == 'false'
+        run: npm publish --provenance
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
