--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - 'package.json'
+      - '.github/workflows/release.yml'
+  workflow_dispatch:
 
 jobs:
   release:
@@ -23,7 +25,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          registry-url: 'https://registry.npmjs.org/'
+          # Removed registry-url to avoid .npmrc generation with empty token
           cache: 'npm'
 
       - name: Install dependencies
@@ -61,18 +63,18 @@ jobs:
           git push origin "v${{ env.VERSION }}"
 
       - name: Rename Artifact
-        if: steps.check_tag.outputs.exists == 'false'
+        if: steps.check_tag.outputs.exists == 'false' || github.event_name == 'workflow_dispatch'
         run: mv dist/kakidash.umd.js dist/kakidash.umd.${{ env.VERSION }}.js
 
       - name: Upload Build Artifact
-        if: steps.check_tag.outputs.exists == 'false'
+        if: steps.check_tag.outputs.exists == 'false' || github.event_name == 'workflow_dispatch'
         uses: actions/upload-artifact@v4
         with:
           name: kakidash-library-${{ env.VERSION }}
           path: dist/kakidash.umd.${{ env.VERSION }}.js
 
       - name: Publish to npm
-        if: steps.check_tag.outputs.exists == 'false'
+        # Allow publish if tag was just created OR if manually triggered (retry)
+        if: steps.check_tag.outputs.exists == 'false' || github.event_name == 'workflow_dispatch'
         run: npm publish --provenance
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        # Removed NODE_AUTH_TOKEN env to use Trusted Publishing (id-token)
