--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          # 修正1: Trusted Publishingでもこれは必須です。これにより.npmrcが生成されます。
+          # Fix 1: Required for Trusted Publishing to generate .npmrc properly.
           registry-url: 'https://registry.npmjs.org'
           cache: 'npm'
 
@@ -77,8 +77,8 @@ jobs:
       - name: Publish to npm
         # Allow publish if tag was just created OR if manually triggered (retry)
         if: steps.check_tag.outputs.exists == 'false' || github.event_name == 'workflow_dispatch'
-        # 修正2: .npmrcの構文エラーを防ぐため、プレースホルダーとしてGITHUB_TOKENを渡します。
-        # 実際の認証は --provenance (OIDC) が行うため、このトークンの中身は影響しません。
+        # Fix 2: Pass GITHUB_TOKEN as a placeholder to prevent .npmrc syntax errors.
+        # Actual authentication is handled by --provenance (OIDC), so the token content does not matter.
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: npm publish --provenance
