--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,4 +74,5 @@ jobs:
           path: dist/kakidash.umd.${{ env.VERSION }}.js
 
       - name: Publish to npm
+        if: steps.check_tag.outputs.exists == 'false' || github.event_name == 'workflow_dispatch'
         run: npm publish --provenance --access public
