--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "build": "tsc && vite build",
         "test": "vitest run",
         "lint": "eslint src tests",
+        "docs": "typedoc",
         "format": "prettier --write \"src/**/*.{ts,json}\""
     },
     "keywords": [
@@ -54,6 +55,7 @@
         "globals": "^17.0.0",
         "happy-dom": "^20.0.11",
         "prettier": "^3.2.5",
+        "typedoc": "^0.28.16",
         "typescript": "^5.4.0",
         "typescript-eslint": "^8.52.0",
         "vite": "^7.3.1",
