--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,16 +15,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+    
+    - name: Install pnpm
+      uses: pnpm/action-setup@v4
+      with:
+        version: 9
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'pnpm'
+    
     - name: Install dependencies
-      run: npm ci
-    - name: Run Lint
-      run: npm run lint
-    - name: Run Tests
-      run: npm run test
-    - name: Run Build
-      run: npm run build
+      run: pnpm install --frozen-lockfile
+    
+    - name: Run All Checks (Turbo)
+      run: pnpm turbo:ci
