--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,20 @@
 {
-    "name": "kakidashi-board",
-    "image": "mcr.microsoft.com/devcontainers/typescript-node:4-24-bookworm",
+    "name": "kakidash",
+    "image": "mcr.microsoft.com/devcontainers/javascript-node:22",
+    "features": {
+        "ghcr.io/devcontainers/features/github-cli:1": {
+            "version": "latest"
+        },
+        "ghcr.io/devcontainers/features/python:1": {
+            "version": "3.12",
+            "installTools": true,
+            "installJupyter": false
+        },
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts",
+            "pnpm": "latest"
+        }
+    },
     "customizations": {
         "vscode": {
             "extensions": [
@@ -16,6 +30,11 @@
             }
         }
     },
+    "containerEnv": {
+        "TZ": "Asia/Tokyo"
+    },
     "remoteUser": "node",
-    "postCreateCommand": "npm install"
+    "privileged": true,
+    "postCreateCommand": "pnpm install && pip install requests python-dotenv",
+    "postStartCommand": "nohup sh -c 'while true; do sudo hwclock -s; sleep 3600; done' > /dev/null 2>&1 &"
 }
