--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,6 +73,6 @@ jobs:
 
       - name: Publish to npm
         if: steps.check_tag.outputs.exists == 'false' || github.event_name == 'workflow_dispatch'
-        run: pnpm publish --provenance --access public
+        run: pnpm publish --provenance --access public --no-git-checks
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
